[package]
name = "ludum-dare-50"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default-features = false, features = ["bevy_gilrs", "bevy_winit", "render", "png", "x11", "filesystem_watcher"] }
benimator = "2.1.0"
heron = { version = "2.0.1", default-features = false, features = ["2d"] }
instant = "0.1.12"
rand = "0.8.5"
